[package]
name = "metro"
version = "0.1.0"
authors = ["Jimmy Wei <ijimmywei@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
futures = "0.3"
serde = "1.0.103"
uuid = { version = "0.8", features = ["v4"] }
actix-web = "1.0"

[lib]
name = "metrolib"
path = "src/lib.rs"